--- a/styles/helpers/_variables.scss
+++ b/styles/helpers/_variables.scss
@@ -1,4 +1,3 @@
-
-$ff-zaychik: "Zaychik", sans-serif;
-$ff-druk: "Druk Text Wide Trial", sans-serif;
-$ff-raleway: "Raleway", sans-serif;
+$ff-accent: "Zaychik", sans-serif;
+$ff-primary: "Druk Text Wide Trial", sans-serif;
+$ff-secondary: "Raleway", sans-serif;
